# APR

./: .gitignore  GEMINI.md  LICENSE  json.json  logging.md  pyproject.toml
data/: Interrogation_01 (Inbraak).txt  Interrogation_02 (Afvaldumping).txt  Interrogation_03 (Cyberattack).txt  Interrogation_04 (Drugs).txt  Interrogation_05 (Financiele fraude).txt  MG.txt  meta_data.json  winkeldiefstal1.txt
src/: APR.py  APRLogger.py  app.py  saje.py  setup_env.py
src/blueprints/: endpoints.py  websocket.py
src/prompting/: engine.py  templates.json
static/: apr-js.js  apr-styles.css  logging-display.js  main.js  proto3-js.js  proto3-styles.css  proto4-js.js  proto4-styles.css
templates/: APR.html  home.html  proto3.html  proto4.html  pvtemplate.html
