[project]
name = "apr"
version = "0.1.0"
description = "Automated Police Reporting through LLMs as described by van Wetten (2025)"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "openai>=1.77.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "sanic>=25.3.0",
    "sanic-ext>=24.12.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]
